# GoQuant-Deribit-Engine

./: .gitignore  CMakeLists.txt
config/: config.json.example
include/: authentication.hpp  config.hpp  market_data.hpp  order_manager.hpp  websocket_server.hpp
src/: authentication.cpp  main.cpp  market_data.cpp  order_manager.cpp  websocket_server.cpp
tests/: websocket_client_test.cpp
